--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-bluetooth-serial",
+  "name": "cordova-plugin-bluetooth-serial3",
   "version": "0.4.7",
   "description": "Bluetooth Serial Communication Plugin",
   "main": "./www/bluetoothSerial.js",
   "cordova": {
-    "id": "cordova-plugin-bluetooth-serial",
+    "id": "cordova-plugin-bluetooth-serial3",
     "platforms": [
       "android",
       "ios",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/don/BluetoothSerial.git"
+    "url": "git+https://github.com/gaia-green-tech/BluetoothSerial3.git"
   },
   "keywords": [
     "cordova",
@@ -21,12 +21,14 @@
     "serial",
     "ble",
     "arduino",
-    "ecosystem:cordova"
+    "ecosystem:cordova",
+    "cordova-android",
+    "cordova-ios"
   ],
   "author": "Don Coleman <don.coleman@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/don/BluetoothSerial/issues"
+    "url": "https://github.com/gaia-green-tech/BluetoothSerial3/issues"
   },
-  "homepage": "https://github.com/don/BluetoothSerial#readme"
+  "homepage": "https://github.com/gaia-green-tech/BluetoothSerial3#readme"
 }
